Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-134412

Fix copyAllFiles in multimediatestlib to copy recursively

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 6.8.4, 6.9.1, 6.10.0 FF
    • 6.10
    • Multimedia
    • None
    • 884eb3c57 (dev), 262c7c669 (6.9), c7f54dcba (6.8)
    • Multimedia, weeks 11-12

    Description

      copyAllFiles does not support recursively copying directory structures. This results in lost files in the tst_qvideoframecolormanagement

      Attachments

        For Gerrit Dashboard: QTBUG-134412
        # Subject Branch Project Status CR V

        Activity

          People

            lars.sutterud Lars Sutterud
            johanseg Jøger Hansegård
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes