Fix copyAllFiles in multimediatestlib to copy recursively

Adds QDirIterator::Subdirectories flag to iterate recursively, and
creates non-existing directories along the way.

Fixes: QTBUG-134412
Change-Id: I828b7e27ef3f1e07f916fcab05d6132793915bdd
Reviewed-by: Jøger Hansegård <joger.hansegard@qt.io>
(cherry picked from commit 884eb3c57cd459c5950d02670c194776db0e63a2)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 262c7c6697274e56eedfc5d42275c4c6d957364c)